Editing welcome page

--- a/html/resources/main.css
+++ b/html/resources/main.css
@@ -4,7 +4,7 @@
 	--background-color: #fff;
 	--secondary-background-color: #f7f7f7;
 
-	--color-blue: #049EF4;
+	--color-blue: #0049e8;
 	--text-color: #444;
 	--secondary-text-color: #9e9e9e;
 
