--- a/html/resources/loadingScreen.css
+++ b/html/resources/loadingScreen.css
@@ -5,18 +5,21 @@ html, body {
   height: 100%;
 }
 #loading-screen {
---speed1: 2s;
---speed2: 3s;
---speed3: 1s;        
-position: absolute;
-z-index: 2;
-top: 0;
-left: 0;
-width: 100%;
-height: 100%;
-background-color: #000000;
-opacity: 1;
-transition: 1s opacity;
+  --speed1: 2s;
+  --speed2: 3s;
+  --speed3: 1s;        
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("../../../assets/textures/sw.jpg"); /* The image used */
+  background-color: #000000;
+  background-position: 50% 50%; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  opacity: 1;
+  transition: 1s opacity;
 }
 #loading-screen.fade-out {
 opacity: 0;
