--- a/html/resources/loadingScreen.css
+++ b/html/resources/loadingScreen.css
@@ -14,7 +14,7 @@ html, body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("../../../assets/textures/sw.jpg"); /* The image used */
+  background-image: url("../../assets/textures/sw.jpg"); /* The image used */
   background-color: #000000;
   background-position: 50% 50%; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
