--- a/html/resources/menuAudio.css
+++ b/html/resources/menuAudio.css
@@ -1,9 +1,10 @@
-html,
-body {
-    margin: 0;
-    height: 100%;
+body, html {
+	width: 100%;
+	height: 100%;   
+   margin: 0px;
+   overflow: hidden;
 }
-
+/* 
 #webgl-output {
     width: 100%;
     height: 100%;
@@ -14,7 +15,7 @@ body {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: rgba(7, 7, 9, 0.1);
+    background-color: transparent;
 }
 
 #instructions {
@@ -22,4 +23,21 @@ body {
     font-size: 1.8em;
     min-height: 100%; 
     min-width: 100%;     
+} */
+
+#start-message {
+   position: absolute;
+   top: 5%;
+   left: 5%;
+   right: 5%;
+   bottom: 5%;
+   color: #ffffff;
+   font-size: 3em;
+   text-align: center;
+   background-color: rgba(150, 150, 150, 0.5);
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   font-family: 'Arial'; 
+   font-weight: bold; 
 }
